tools/tests/errors/surf_arity_15.ki
# builtin ord() called with no argument (required param missing)
discard ord()
